cka/yaml/busybox.yaml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: busybox
  name: busybox
  namespace: cka
spec:
  containers:
  - command:
    - "sleep"
    - "3600"
    image: busybox
    name: busybox
