cka/yaml/httpd-control-plane.yaml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: httpd
  name: httpd
  namespace: cka
spec:
  containers:
  - image: httpd:2.4
    name: webserver
  restartPolicy: Always
  tolerations:
  - effect: NoSchedule
    key: node-role.kubernetes.io/control-plane
  nodeSelector:
    node-role.kubernetes.io/control-plane: ""
