cka/yaml/httpd-healthcheck.yaml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: httpd-healthcheck
  name: httpd-healthcheck
  namespace: cka
spec:
  containers:
  - image: lisenet/httpd-healthcheck:0.1
    name: httpd-healthcheck
    resources:
      requests:
        memory: 40Mi
      limits:
        memory: 128Mi
...
